--- a/butterfly_cli/pubspec.yaml
+++ b/butterfly_cli/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   checked_yaml: ^2.0.3
   json_annotation: ^4.9.0
   mason_logger: ^0.3.1
+  pub_semver: ^2.1.4
   pubspec_parse: ^1.3.0
   yaml_edit: ^2.2.1
 
