--- a/packages/auth_management_firebase/pubspec.yaml
+++ b/packages/auth_management_firebase/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auth_management:
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
