--- a/packages/auth_management_database_isar_community/pubspec.yaml
+++ b/packages/auth_management_database_isar_community/pubspec.yaml
@@ -10,11 +10,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auth_management:
+  isar:
+    hosted: https://pub.isar-community.dev
+    version: ^4.0.3
+  isar_flutter_libs:
+    hosted: https://pub.isar-community.dev
+    version: ^4.0.3
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
