--- a/butterfly_cli/pubspec.yaml
+++ b/butterfly_cli/pubspec.yaml
@@ -10,11 +10,14 @@ environment:
 dependencies:
   args: ^2.4.2
   checked_yaml: ^2.0.3
+  dart_style: ^3.0.1
   json_annotation: ^4.9.0
+  mason: ^0.1.0
   mason_logger: ^0.3.1
   meta: ^1.16.0
   pub_semver: ^2.1.4
   pubspec_parse: ^1.3.0
+  recase: ^4.1.0
   yaml_edit: ^2.2.1
 
 dev_dependencies:
