--- a/butterfly_cli/pubspec.yaml
+++ b/butterfly_cli/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   mason_logger: ^0.3.1
   meta: ^1.16.0
   pub_semver: ^2.1.4
-  pubspec_parse: ^1.3.0
+  pubspec_manager: ^1.0.0
   recase: ^4.1.0
   yaml_edit: ^2.2.1
 
