--- a/mason/immutable_model/brick.yaml
+++ b/mason/immutable_model/brick.yaml
@@ -1,4 +1,4 @@
-name: imutable_model
+name: immutable_model
 description: A new brick created with the Mason CLI.
 
 # The following defines the brick repository url.
