feat: add dependency management and core service
- Rename `framework_service` brick to `core_service`.
- Rename `base_framework.dart` to `base_core.dart`.
- Update the file locations to `lib/` in `framework.dart`.
- Refactor `pubspec.dart` to manage dependency add using the `flutter pub add` command.
- Add new dependencies: `go_router`, `build_runner`, and `go_router_builder` in init command when using router.
- change service class to abstract class
- Update `core_management.dart` file to be empty.
- Add support for theme extension.

--- a/mason/core_service/brick.yaml
+++ b/mason/core_service/brick.yaml
@@ -1,4 +1,4 @@
-name: framework_service
+name: core_service
 description: A new brick created with the Mason CLI.
 
 # The following defines the brick repository url.
