--- a/butterfly_cli/pubspec.yaml
+++ b/butterfly_cli/pubspec.yaml
@@ -1,6 +1,6 @@
 name: butterfly_cli
 description: A sample command-line application with basic argument parsing.
-version: 0.0.8+4
+version: 0.0.9
 # repository: https://github.com/my_org/my_repo
 
 environment:
