feat: add gen_version command to melos
- Adds a `gen_version` command to melos to generate version information.
- Configures the version command to run `gen_version` post-hook for the butterfly_cli.
- Removes the version file.

--- a/melos.yaml
+++ b/melos.yaml
@@ -13,3 +13,12 @@ scripts:
     exec: dart run build_runner build
   format:
     exec: dart format --set-exit-if-changed .
+  gen_version:
+    exec: butterfly2 g version
+    packageFilters:
+      scope: butterfly_cli
+
+command:
+  version:
+    hooks:
+      post: melos run gen_version
