--- a/packages/auth_management_database_isar_community/pubspec.yaml
+++ b/packages/auth_management_database_isar_community/pubspec.yaml
@@ -1,6 +1,6 @@
 name: auth_management_database_isar_community
 description: "A new Flutter project."
-version: 0.0.2
+version: 0.0.2+1
 homepage:
 
 environment:
