refactor(auth_management_database_hive_ce): use git dependency for auth_management
This commit modifies the `pubspec.yaml` for `auth_management_database_hive_ce` to use a Git dependency for the `auth_management` package. It now points to the `develop` branch of the `redfieldchristabel/butterfly` repository, specifically the `packages/auth_management` path.

Additionally, the `pubspec.lock` file for the example project has been updated to reflect changes in various transitive dependencies and the Dart SDK version.

The `.idea/caches/deviceStreaming.xml` file has also been updated with new device profiles.

--- a/packages/auth_management_database_hive_ce/pubspec.yaml
+++ b/packages/auth_management_database_hive_ce/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   auth_management:
+    git:
+      url: git@github.com:redfieldchristabel/butterfly.git
+      ref: develop
+      path: packages/auth_management
   hive_ce: ^2.10.1
   hive_ce_flutter: ^2.2.0
   path_provider: ^2.1.5
