build: update core_management dependency to git version
This commit updates the `core_management` dependency in `pubspec.yaml` to point to a specific git repository and branch, instead of a published version.

--- a/packages/core_management_route_go_router/pubspec.yaml
+++ b/packages/core_management_route_go_router/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
     sdk: flutter
   go_router: ^15.1.1
   core_management:
+    git:
+      url: git@github.com:redfieldchristabel/butterfly.git
+      ref: develop
+      path: packages/core_management
 
 dev_dependencies:
   flutter_test:
