--- a/packages/auth_management_provider_riverpod/pubspec.yaml
+++ b/packages/auth_management_provider_riverpod/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
   auth_management:
+    git:
+      url: git@github.com:redfieldchristabel/butterfly.git
+      ref: develop
+      path: packages/auth_management
   riverpod: ^2.6.1
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
