chore(release): publish packages
 - auth_management@0.0.4
 - auth_management_database_hive_ce@0.0.3+1
 - auth_management_database_hive_ce_example@1.2.1
 - auth_management_provider_riverpod@0.0.3
 - butterfly_cli@0.0.12+1
 - core_management@0.0.5
 - core_management_route_go_router@0.0.3
 - example@1.1.0
 - auth_management_database_isar_community_example@1.3.1
 - auth_management_database_isar_community@0.0.4+1
 - auth_management_firebase@0.0.2+2
 - auth_management_firebase_google@0.0.2+2

--- a/packages/auth_management_provider_riverpod/pubspec.yaml
+++ b/packages/auth_management_provider_riverpod/pubspec.yaml
@@ -1,6 +1,6 @@
 name: auth_management_provider_riverpod
 description: "A Dipendency Injection library to support Riverpod for Butterfly Auth Management"
-version: 0.0.2+1
+version: 0.0.3
 homepage:
 
 environment:
