chore(release): publish packages
 - core_management@0.0.6
 - core_management_route_go_router@0.0.3+1
 - example@1.2.1

--- a/packages/core_management_route_go_router/pubspec.yaml
+++ b/packages/core_management_route_go_router/pubspec.yaml
@@ -1,6 +1,6 @@
 name: core_management_route_go_router
 description: "A new Flutter project."
-version: 0.0.3
+version: 0.0.3+1
 homepage:
 
 environment:
