--- a/packages/auth_management_database_isar_community/pubspec.yaml
+++ b/packages/auth_management_database_isar_community/pubspec.yaml
@@ -11,18 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   auth_management:
-  isar:
-    hosted: https://pub.isar-community.dev
-    version: ^4.0.3
-  isar_flutter_libs:
-    hosted: https://pub.isar-community.dev
-    version: ^4.0.3
+  isar_community:
+  isar_community_flutter_libs:
   path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
