--- a/packages/auth_management_database_hive_ce/pubspec.yaml
+++ b/packages/auth_management_database_hive_ce/pubspec.yaml
@@ -18,12 +18,13 @@ dependencies:
   hive_ce: ^2.10.1
   hive_ce_flutter: ^2.2.0
   path_provider: ^2.1.5
+  hive_ce_generator:
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
