--- a/packages/auth_management_database_isar_community/example/pubspec.yaml
+++ b/packages/auth_management_database_isar_community/example/pubspec.yaml
@@ -33,13 +33,8 @@ dependencies:
   auth_management:
   auth_management_database_isar_community:
     path: ../
-  isar:
-    hosted: https://pub.isar-community.dev
-    version: ^4.0.3
-  isar_flutter_libs:
-    hosted: https://pub.isar-community.dev
-    version: ^4.0.3
-
+  isar_community:
+  isar_community_flutter_libs:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,8 +49,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.4.13
+  isar_community_generator:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
