--- a/packages/core_management_route_go_router/example/pubspec.yaml
+++ b/packages/core_management_route_go_router/example/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^17.0.0
+  build_verify: ^3.1.1
 
 dev_dependencies:
   flutter_test:
