--- a/packages/auth_management_provider_riverpod/pubspec.yaml
+++ b/packages/auth_management_provider_riverpod/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.5
 homepage:
 
 environment:
-  sdk: ^3.5.3
-  flutter: ">=1.17.0"
+  sdk: ^3.0.0
+  flutter: ">=3.38.6"
 
 dependencies:
   flutter:
@@ -16,16 +16,21 @@ dependencies:
       ref: develop
       path: packages/auth_management
   flutter_riverpod: ^3.0.3
-  riverpod_annotation: ^4.0.0
+  riverpod_annotation: ^3.0.0
+ 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  riverpod_generator: ^4.0.0+1
-  build_runner: ^2.4.13
-  custom_lint: ^0.8.1
+  riverpod_generator: ^3.0.3
+  build_runner: ^2.10.5
   riverpod_lint: ^3.0.3
+  custom_lint: ^0.8.1
+  
+
+# dependency_overrides: 
+#   analyzer: ^8.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
