--- a/packages/auth_management_provider_riverpod/pubspec.yaml
+++ b/packages/auth_management_provider_riverpod/pubspec.yaml
@@ -16,14 +16,14 @@ dependencies:
       ref: develop
       path: packages/auth_management
   flutter_riverpod: ^3.0.3
-  riverpod_annotation: ^3.0.0
+  riverpod_annotation: ^4.0.0
  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  riverpod_generator: ^3.0.3
+  riverpod_generator: ^4.0.0+1
   build_runner: ^2.10.5
   riverpod_lint: ^3.0.3
   custom_lint: ^0.8.1
