--- a/packages/auth_management_provider_riverpod/pubspec.yaml
+++ b/packages/auth_management_provider_riverpod/pubspec.yaml
@@ -15,17 +15,18 @@ dependencies:
       url: git@github.com:redfieldchristabel/butterfly.git
       ref: old2
       path: packages/auth_management
-  flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
+  flutter_riverpod: ^3.0.2
+  riverpod_annotation: ^3.0.3
+  remove: ^1.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  riverpod_generator: ^2.6.2
-  build_runner: ^2.4.13
-  custom_lint: ^0.7.0
-  riverpod_lint: ^2.6.2
+  riverpod_generator: ^3.0.3
+  riverpod_lint: ^3.0.3
+  custom_lint: ^0.8.1
+  build_runner: ^2.10.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
